Implemented items from database.